feat: user api GET /api/v1/users   get all users
GET /api/v1/users/{id}
  get user by id
