# app/model/user.go
@@ -1,6 +1,10 @@
 package model
 
-import "gorm.io/gorm"
+import (
+	"time"
+
+	"gorm.io/gorm"
+)
 
 const (
 	ROLE_ADMINISTRATOR int64 = 1
@@ -9,13 +13,14 @@ const (
 )
 
 type User struct {
-	ID    int64  `json:"id" gorm:"primaryKey;autoIncrement:false"`
-	Name  string `json:"name"`
-	Email string `json:"email"`
-	// Password string `json:"-"`
-	Password string `json:"password,omitempty"`
-	Role     int64  `json:"role"`
-	gorm.Model
+	ID        int64          `json:"id" gorm:"primaryKey;autoIncrement:false"`
+	Name      string         `json:"name"`
+	Email     string         `json:"email"`
+	Password  string         `json:"password,omitempty"`
+	Role      int64          `json:"role"`
+	CreatedAt time.Time      `json:"created_at"`
+	UpdatedAt time.Time      `json:"updated_at"`
+	DeletedAt gorm.DeletedAt `json:"-" gorm:"index"`
 }
 
 func (user *User) Safe() (safe *User) {
